<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/s"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/vascinacaocorona"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txvAgendamentoDoses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/txt_agendamento_de_doses"
        android:textColor="#131313"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/edtNome"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/estilo_imput"
        android:drawableStart="@drawable/login"
        android:ems="10"
        android:hint="@string/txt_nome"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="#0E0E0E"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/txvAgendamentoDoses"
        app:layout_constraintStart_toStartOf="@+id/txvAgendamentoDoses"
        app:layout_constraintTop_toBottomOf="@+id/txvAgendamentoDoses" />

    <EditText
        android:id="@+id/edtDtNascimento"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/estilo_imput"
        android:drawableStart="@drawable/data"
        android:ems="10"
        android:hint="@string/txt_data_de_nascimento"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="#121111"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/edtNome"
        app:layout_constraintStart_toStartOf="@+id/edtNome"
        app:layout_constraintTop_toBottomOf="@+id/edtNome" />

    <EditText
        android:id="@+id/edtCPF"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/estilo_imput"
        android:drawableStart="@drawable/data"
        android:ems="10"
        android:hint="@string/txt_cpf"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="#151515"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/edtDtNascimento"
        app:layout_constraintStart_toStartOf="@+id/edtDtNascimento"
        app:layout_constraintTop_toBottomOf="@+id/edtDtNascimento" />

    <TextView
        android:id="@+id/txvSexo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/txt_sexo"
        android:textColor="#101010"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/edtCPF"
        app:layout_constraintTop_toBottomOf="@+id/edtCPF" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/edtCPF"
        app:layout_constraintStart_toStartOf="@+id/edtCPF"
        app:layout_constraintTop_toBottomOf="@+id/txvSexo">

        <RadioButton
            android:id="@+id/rbnFeminino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="#0E0E0E"
            android:text="@string/txt_f"
            android:textColor="#0E0E0E"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rbnMasculino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="#1B1A1A"
            android:text="@string/txt_m"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rbnOutros"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="#1C1C1C"
            android:text="@string/txt_o"
            android:textSize="20sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/txvEscolaridade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/txt_escolaridade"
        android:textColor="#0E0E0E"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/txvSexo"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <Spinner
        android:id="@+id/spnEscolaridade"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:entries="@array/escolaridade"
        app:layout_constraintEnd_toEndOf="@+id/txvEscolaridade"
        app:layout_constraintStart_toStartOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/txvEscolaridade" />

    <Button
        android:id="@+id/btnAvancarEscolhaLocal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="#330843F3"
        android:text="@string/txtavancar"
        app:layout_constraintEnd_toEndOf="@+id/radioGroup"
        app:layout_constraintStart_toStartOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/spnEscolaridade" />

</androidx.constraintlayout.widget.ConstraintLayout>